--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.7",
     "pug": "^3.0.2"
   },
