--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.7",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
