--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "password": "^0.1.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
